<resources>
    <string name="app_name">Wallot-App</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="novaConta">Se cadastrar</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="conta_existente">Já tenho uma conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="versao">0.5</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_usuario_text">%1$s</string>
    <string name="email_usuario_text">%1$s</string>
</resources>
